[gd_scene load_steps=79 format=3 uid="uid://c1w8bra2bw10k"]

[ext_resource type="Texture2D" uid="uid://rnnc8fi8wetg" path="res://textures/pugalka_loaded.png" id="1_12oxt"]
[ext_resource type="Script" path="res://scripts/ProgressBar.gd" id="1_64lqw"]
[ext_resource type="Texture2D" uid="uid://cgutmr8r8v0ls" path="res://textures/pugalka_loading.png" id="2_d4kd3"]
[ext_resource type="Texture2D" uid="uid://0vv02ey037s2" path="res://textures/bar_over.png" id="3_lvtdt"]
[ext_resource type="Texture2D" uid="uid://bsy6oywrjqbmx" path="res://textures/bar_progress.png" id="4_csxa7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1m52u"]
atlas = ExtResource("1_12oxt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n17dx"]
atlas = ExtResource("1_12oxt")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_atbu8"]
atlas = ExtResource("1_12oxt")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7mk3"]
atlas = ExtResource("1_12oxt")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycnqy"]
atlas = ExtResource("1_12oxt")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubgnd"]
atlas = ExtResource("1_12oxt")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogvy6"]
atlas = ExtResource("1_12oxt")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lakyl"]
atlas = ExtResource("1_12oxt")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24j1c"]
atlas = ExtResource("1_12oxt")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_suvp1"]
atlas = ExtResource("1_12oxt")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3vq3"]
atlas = ExtResource("2_d4kd3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyctx"]
atlas = ExtResource("2_d4kd3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy6ru"]
atlas = ExtResource("2_d4kd3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sov6g"]
atlas = ExtResource("2_d4kd3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lipwb"]
atlas = ExtResource("2_d4kd3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kjk3"]
atlas = ExtResource("2_d4kd3")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2am4"]
atlas = ExtResource("2_d4kd3")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbc3a"]
atlas = ExtResource("2_d4kd3")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk2j1"]
atlas = ExtResource("2_d4kd3")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ormle"]
atlas = ExtResource("2_d4kd3")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnibh"]
atlas = ExtResource("2_d4kd3")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_doro2"]
atlas = ExtResource("2_d4kd3")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3ts3"]
atlas = ExtResource("2_d4kd3")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkcqh"]
atlas = ExtResource("2_d4kd3")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iect"]
atlas = ExtResource("2_d4kd3")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht7c5"]
atlas = ExtResource("2_d4kd3")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yksl"]
atlas = ExtResource("2_d4kd3")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xus1h"]
atlas = ExtResource("2_d4kd3")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00cx2"]
atlas = ExtResource("2_d4kd3")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_btcm5"]
atlas = ExtResource("2_d4kd3")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocy8g"]
atlas = ExtResource("2_d4kd3")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsik0"]
atlas = ExtResource("2_d4kd3")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2mf2"]
atlas = ExtResource("2_d4kd3")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj5es"]
atlas = ExtResource("2_d4kd3")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ghaw"]
atlas = ExtResource("2_d4kd3")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmcqv"]
atlas = ExtResource("2_d4kd3")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5kkl"]
atlas = ExtResource("2_d4kd3")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_77snl"]
atlas = ExtResource("2_d4kd3")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg8xj"]
atlas = ExtResource("2_d4kd3")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrjb2"]
atlas = ExtResource("2_d4kd3")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_67q2l"]
atlas = ExtResource("2_d4kd3")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf2wf"]
atlas = ExtResource("2_d4kd3")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8217"]
atlas = ExtResource("2_d4kd3")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fa1o"]
atlas = ExtResource("2_d4kd3")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y74ey"]
atlas = ExtResource("2_d4kd3")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_245du"]
atlas = ExtResource("2_d4kd3")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8i8s"]
atlas = ExtResource("2_d4kd3")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_31fsk"]
atlas = ExtResource("2_d4kd3")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhooj"]
atlas = ExtResource("2_d4kd3")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ig7s"]
atlas = ExtResource("2_d4kd3")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rx0v"]
atlas = ExtResource("2_d4kd3")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65m0l"]
atlas = ExtResource("2_d4kd3")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr3aa"]
atlas = ExtResource("2_d4kd3")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbg2t"]
atlas = ExtResource("2_d4kd3")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uw5s"]
atlas = ExtResource("2_d4kd3")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88576"]
atlas = ExtResource("2_d4kd3")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_04ib1"]
atlas = ExtResource("2_d4kd3")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k68i"]
atlas = ExtResource("2_d4kd3")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ov25"]
atlas = ExtResource("2_d4kd3")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqaqp"]
atlas = ExtResource("2_d4kd3")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq010"]
atlas = ExtResource("2_d4kd3")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t72p7"]
atlas = ExtResource("2_d4kd3")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjnd8"]
atlas = ExtResource("2_d4kd3")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpiqt"]
atlas = ExtResource("2_d4kd3")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtrh6"]
atlas = ExtResource("2_d4kd3")
region = Rect2(384, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw5gg"]
atlas = ExtResource("2_d4kd3")
region = Rect2(448, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rjdj"]
atlas = ExtResource("2_d4kd3")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8vn2"]
atlas = ExtResource("2_d4kd3")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l40nl"]
atlas = ExtResource("2_d4kd3")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcnxy"]
atlas = ExtResource("2_d4kd3")
region = Rect2(192, 448, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dp7ri"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m52u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n17dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atbu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7mk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycnqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubgnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogvy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lakyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24j1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suvp1")
}],
"loop": false,
"name": &"loaded",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3vq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyctx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy6ru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sov6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lipwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kjk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2am4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbc3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk2j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ormle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnibh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doro2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3ts3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkcqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iect")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht7c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yksl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xus1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00cx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btcm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocy8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsik0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2mf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj5es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ghaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmcqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5kkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77snl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg8xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrjb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67q2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf2wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8217")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fa1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y74ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_245du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8i8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31fsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhooj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ig7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rx0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65m0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr3aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbg2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uw5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88576")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04ib1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k68i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ov25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqaqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq010")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t72p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjnd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpiqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtrh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw5gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rjdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8vn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l40nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcnxy")
}],
"loop": true,
"name": &"loading",
"speed": 60.0
}]

[sub_resource type="Gradient" id="Gradient_synjf"]
colors = PackedColorArray(0.584314, 0, 0, 1, 0.878431, 0.278431, 0.764706, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vnciu"]
gradient = SubResource("Gradient_synjf")
width = 568
height = 32
metadata/_snap_enabled = true

[node name="ProgressBar" type="Node2D"]
script = ExtResource("1_64lqw")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(0, 96)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
texture_filter = 1
position = Vector2(256, 688)
sprite_frames = SubResource("SpriteFrames_dp7ri")
animation = &"loading"
autoplay = "loading"

[node name="TextureProgressBar" type="TextureProgressBar" parent="CharacterBody2D"]
texture_filter = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 288.0
offset_top = 672.0
offset_right = 856.0
offset_bottom = 704.0
grow_horizontal = 2
grow_vertical = 0
max_value = 213.0
value = 213.0
texture_under = SubResource("GradientTexture2D_vnciu")
texture_over = ExtResource("3_lvtdt")
texture_progress = ExtResource("4_csxa7")

[node name="Label" type="Label" parent="CharacterBody2D"]
texture_filter = 1
offset_left = 512.0
offset_top = 676.0
offset_right = 544.0
offset_bottom = 699.0
text = "4:20"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="CharacterBody2D"]

[node name="MoveAwayTimer" type="Timer" parent="CharacterBody2D"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="CharacterBody2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CharacterBody2D/MoveAwayTimer" to="." method="_on_move_away_timer_timeout"]
